# tapebuilding

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
download/: README.md  download_music.py  download_spotify.py  download_utils.py  retry_failures.py  soundbyte_albums.py  soundcloud_downloader.py  spotify_to_csv.py  spotify_utils.py  yt_dlp_downloader.py
organize/: README.md  beets_import.py  cleanup.py  config.yaml.example  library.py  normalize_artists.py  preimport.py
pipelines/: README.md  __init__.py  download_songs.py
playlists/: README.md  build.py  indexer.py  m3u.py  matcher.py
tapedeck/: README.md  copy.py  deck.py  paths.py  resolve.py
