[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tapebuilding"
version = "0.1.0"
description = "building and managing my personal music library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deno>=2.9.1",
    "python-dotenv>=1.2.2",
    "spotdl>=4.5.0",
    "spotipy>=2.26.0",
    "yt-dlp[default]>=2026.6.9",
]

[tool.setuptools]
packages = ["download", "organize"]

[project.scripts]
export = "download.spotify_to_csv:main"
download = "download.download_music:main"
soundcloud = "download.soundcloud_downloader:main"
