[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tapebuilding"
version = "0.1.0"
description = "building and managing my personal music library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beets[embedart,fetchart,lyrics]>=2.12.0",
    "deno>=2.9.1",
    "firebase-admin>=7.5.0",
    "python-dotenv>=1.2.2",
    "spotdl>=4.5.0",
    "spotipy>=2.26.0",
    "yt-dlp[default]>=2026.6.9",
]

[tool.setuptools]
packages = ["download", "organize", "playlists"]

[project.scripts]
export = "download.spotify_to_csv:main"
spotify = "download.download_spotify:main"
ytdl = "download.yt_dlp_downloader:main"
retry = "download.retry_failures:main"
cleanup = "organize.cleanup:main"
soundbyte = "download.soundbyte_albums:main"
beets-import = "organize.beets_import:main"
preimport = "organize.preimport:main"
playlists = "playlists.build:main"
